--- a/Assessment5b/Views/Home/Index.cshtml
+++ b/Assessment5b/Views/Home/Index.cshtml
@@ -3,6 +3,7 @@
 }
 
 <div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+    <h1 class="display-4">Welcome to my shopping cart!</h1>
+    <a href="/Home/Item">Shop</a>
+    <a href="/Home/Checkout">Checkout</a>
 </div>
