--- a/Assessment5b/Views/Home/Checkout.cshtml
+++ b/Assessment5b/Views/Home/Checkout.cshtml
@@ -10,7 +10,7 @@
 <p>Item 3: @Model.Item3</p>
 
 <div class="form-group">
-    <input type="submit" value="Continue Shopping" class="btn btn-primary" />
+    <a href="/Home/Item">Shop</a>
 </div>
 
 @if (Model.Item1 + Model.Item2 + Model.Item3 != 0)
