--- a/Assessment5b/Views/Home/Item.cshtml
+++ b/Assessment5b/Views/Home/Item.cshtml
@@ -8,4 +8,4 @@
 <input type="button" value="Add Item 1" onclick="location.href='@Url.Action("Home", "Item", 1)'" />
 
 
-<button type="submit" class="btn btn-primary">Checkout</button>
+<a href="/Home/Checkout">Checkout</a>
